--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ICMSBulgaria</string>
+    <!-- PARSE -->
+    <string name="parse_app_id">yaZmx5u41I7ItuqrVM2eoAP4aeoySyMgrvr28zDG</string>
+    <string name="parse_client_key">fHtoVWOpoTbYCUEzBKT63kIvTnbqGXP3hprjaDAV</string>
+    <string name="parse_server">https://parseapi.back4app.com/</string>
 </resources>
